--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,122 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="description_logo">Kemendesa Scheduler Logo</string>
+    <string name="description_copyright">Kemendesa Copyright All Right Reserved</string>
+    <string name="description_general">No Description Here</string>
+    <string name="hint_username_text">Input your username</string>
+    <string name="label_sign_in">Sign In Now</string>
+
+
+    <!-- color palette dark theme -->
+    <color name="background">#424458</color>
+    <color name="cover">#424458</color>
+    <color name="white">#ffffff</color>
+    <color name="gray">#a5a5a5</color>
+    <color name="silver">#8285a0</color>
+    <color name="red_light">#dc6263</color>
+    <color name="red_dark">#c94546</color>
+    <color name="blue_light">#64a0d7</color>
+    <color name="blue_dark">#1a9bd7</color>
+    <color name="orange_light">#dc6d4f</color>
+    <color name="orange_dark">#c85a3c</color>
+
+    <!-- dummy text -->
+    <string name="dummy_text_sort">Lorem Isum</string>
+    <string name="dummy_text_medium">Dolor amet isum dummy text</string>
+    <string name="dummy_text_long">Amore diaz lorem isum dummy dolor amet zelati xamia dianyu quaemo ufilc vila crotega</string>
+    <string name="dummy_date_sort">17/01</string>
+    <string name="dummy_date_medium">17\-01\-2015</string>
+    <string name="dummy_date_long">17 January 2015</string>
+    <string name="dummy_number_short">4</string>
+    <string name="dummy_number_medium">52</string>
+    <string name="dummy_number_long">398</string>
+    <string name="dummy_money_zero">IDR 0 K</string>
+    <string name="dummy_money_sort">IDR 12 K</string>
+    <string name="dummy_money_medium">IDR 8000 K</string>
+    <string name="dummy_money_long">IDR 22000 K</string>
+    <string name="dummy_name">Angga Ari Wijaya</string>
+    <string name="dummy_title">Mobile Programmer</string>
+    <string name="hint_password_text">Input your password</string>
+    <string name="label_button_sign_in">LOGIN</string>
+    <string name="label_button_create_schedule">NEW SCHEDULE</string>
+    <string name="label_tap">TAP TO START</string>
+    <string name="title_dashboard">DASHBOARD</string>
+    <string name="title_schedule">SCHEDULE</string>
+    <string name="title_calendar">CALENDAR</string>
+    <string name="title_note">NOTE</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="login_failed_title">Login Failed</string>
+    <string name="login_failed_message">Your credential is not accepted</string>
+    <string name="error_title">Error</string>
+    <string name="error_message">Something is Getting Wrong</string>
+    <string name="title_incoming">INCOMING</string>
+    <string name="title_schedule_new">NEW SCHEDULE</string>
+    <string name="label_field_event">EVENT / ACTIVITY</string>
+    <string name="hint_event_text">Eg. Meeting with Client</string>
+    <string name="label_field_date">DATE</string>
+    <string name="hint_time_text">Eg. 08:00 AM</string>
+    <string name="label_field_time">TIME</string>
+    <string name="hint_date_text">Eg. 20 August 2015</string>
+    <string name="label_field_location">LOCATION</string>
+    <string name="hint_location_text">Eg. Shangrilla Hotel</string>
+    <string name="hint_description_text">Write your details event and activity</string>
+    <string name="label_button_save">SAVE</string>
+    <string name="label_field_description">DESCRIPTION</string>
+    <string name="title_schedule_detail">SCHEDULE DETAIL</string>
+    <string name="label_button_back">BACK</string>
+    <string name="label_button_edit">EDIT</string>
+    <string name="label_button_delete">DELETE</string>
+    <string name="label_button_update">UPDATE</string>
+    <string name="label_button_create_note">NEW NOTE</string>
+    <string name="title_note_new">NEW NOTE</string>
+    <string name="label_field_title">NOTE TITLE</string>
+    <string name="hint_title_text">Eg. List of Shoping Cart</string>
+    <string name="label_field_label">LABEL</string>
+    <string name="hint_label_text">Eg. Important, Daily, Work</string>
+    <string name="hint_note_text">Put your note here</string>
+    <string name="label_field_note">NOTE CONTENT</string>
+    <string name="title_setting">SETTING</string>
+    <string name="label_field_name">NAME</string>
+    <string name="label_field_work">WORK</string>
+    <string name="hint_name_text">Eg. Shakti Asgard</string>
+    <string name="hint_work_text">Eg. Chief Executive Officer</string>
+    <string name="label_field_about">ABOUT</string>
+    <string name="hint_about_text">Describe about your work and profile</string>
+    <string name="label_field_password">PASSWORD</string>
+    <string name="label_field_newpassword">NEW PASSWORD</string>
+    <string name="hint_new_password_text">Optional for password changes</string>
+    <string name="hint_confirm_password_text">Confirm your new password</string>
+    <string name="label_field_confirm_password">CONFIRM PASSWORD</string>
+    <string name="subtitle_setting">Configure application like notification time, user account themes and schedule management.</string>
+    <string name="subtitle_note">Snapshot your activities and write all of stuff. Just single touch and re-organize all of them.</string>
+    <string name="title_note_edit">EDIT NOTE</string>
+    <string name="title_note_detail">NOTE DETAIL</string>
+    <string name="subtitle_schedule">Manage all task, event and it's going to becoming reminder just single touch and re-organize all of them.</string>
+    <string name="title_schedule_edit">EDIT SCHEDULE</string>
+    <string name="label_detail">DETAIL</string>
+
+    <!-- Nav Drawer Menu Items -->
+    <string-array name="nav_drawer_items">
+        <item>Dashboard</item>
+        <item>Schedule</item>
+        <item>Calendar</item>
+        <item>Note</item>
+        <item>Setting</item>
+        <item>Logout</item>
+    </string-array>
+
+    <!-- Nav Drawer List Item Icons -->
+    <!-- Keep them in order as the titles are in -->
+    <array name="nav_drawer_icons">
+        <item>@drawable/ic_pencil</item>
+        <item>@drawable/ic_pencil</item>
+        <item>@drawable/ic_pencil</item>
+        <item>@drawable/ic_pencil</item>
+        <item>@drawable/ic_pencil</item>
+        <item>@drawable/ic_pencil</item>
+    </array>
 </resources>
